--- a/bin/Doctor/Doctor.fxml
+++ b/bin/Doctor/Doctor.fxml
@@ -73,7 +73,7 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="291.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="291.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" onAction="#ShowDash" style="-fx-background-color: #202020;" text="DASHBOARD" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
@@ -83,7 +83,7 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="394.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="PATENT RECORDS" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="394.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" onAction="#ShowHist" style="-fx-background-color: #202020;" text="PATENT RECORDS" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
