--- a/src/Doctor/PATIENTS_HIS.fxml
+++ b/src/Doctor/PATIENTS_HIS.fxml
@@ -9,17 +9,12 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doctor.DoctorController">
    <children>
-      <BorderPane fx:id="borderpane1" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="1125.0">
+      <BorderPane fx:id="borderpane1" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="1125.0">
          <top>
             <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
-                  <Button layoutX="473.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text=" SEARCH PATIENT" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="681.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #845f10;" text="DELETE PATIENT" textFill="WHITE">
+                  <Button layoutX="680.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" onAction="#ShowPatientHist" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text=" SEARCH PATIENT" textFill="WHITE">
                      <font>
                         <Font name="Verdana Bold" size="12.0" />
                      </font>
