--- a/bin/Admin/MP-Search.fxml
+++ b/bin/Admin/MP-Search.fxml
@@ -25,13 +25,13 @@
       <TableView fx:id="PharmacistTable" layoutX="109.0" layoutY="173.0" opacity="0.87" prefHeight="355.0" prefWidth="906.0">
         <columns>
         <TableColumn prefWidth="75.0" text="SELECT" />
-          <TableColumn fx:id="Sno" prefWidth="77.5999755859375" text="S.NO." />
-          <TableColumn fx:id="F_name" prefWidth="111.20001220703125" text="FIRST NAME" />
-            <TableColumn fx:id="L_name" prefWidth="118.4000244140625" text="LAST NAME" />
-            <TableColumn fx:id="Email" prefWidth="122.39997863769531" text="EMAIL ID" />
-            <TableColumn fx:id="DOB" prefWidth="129.599853515625" text="DATE OF BIRTH" />
-            <TableColumn fx:id="M_num" prefWidth="132.0" text="MOBLIE NO." />
-            <TableColumn fx:id="QualificationP" prefWidth="143.19998779296873" text="QUALIFICATION" />
+          <TableColumn prefWidth="77.5999755859375" text="S.NO." />
+          <TableColumn prefWidth="111.20001220703125" text="FIRST NAME" />
+            <TableColumn prefWidth="118.4000244140625" text="LAST NAME" />
+            <TableColumn prefWidth="122.39997863769531" text="EMAIL ID" />
+            <TableColumn prefWidth="129.599853515625" text="DATE OF BIRTH" />
+            <TableColumn prefWidth="132.0" text="MOBLIE NO." />
+            <TableColumn prefWidth="143.19998779296873" text="QUALIFICATION" />
         </columns>
       </TableView>
       <Text fill="#0c3d6b" layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PHARMACIST">
