--- a/src/Doctor/PATIENTS_HIS.fxml
+++ b/src/Doctor/PATIENTS_HIS.fxml
@@ -7,40 +7,36 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doctor.DoctorController">
-   <children>
-      <BorderPane fx:id="borderpane1" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="1125.0">
-         <top>
-            <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
-                  <Button layoutX="680.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" onAction="#ShowPatientHist" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text=" SEARCH PATIENT" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" style="-fx-background-color: #845f10;" text="EDIT PATIENT" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Text fill="#0c3d6b" layoutX="57.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PATIENT HISTORY" wrappingWidth="197.5341796875">
-                     <font>
-                        <Font name="System Bold Italic" size="18.0" />
-                     </font>
-                  </Text>
-               </children>
-            </AnchorPane>
-         </top>
-         <left>
-            <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
-         </left>
-         <right>
-            <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
-         </right>
-         <bottom>
-            <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
-         </bottom>
-      </BorderPane>
-   </children>
-</AnchorPane>
+<BorderPane fx:id="borderpane1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="675.0" minWidth="1125.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doctor.DoctorController">
+   <top>
+      <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
+            <Button layoutX="680.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" onAction="#ShowPatientHist" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text=" SEARCH PATIENT" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" style="-fx-background-color: #845f10;" text="EDIT PATIENT" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Button>
+            <Text fill="#0c3d6b" layoutX="57.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PATIENT HISTORY" wrappingWidth="197.5341796875">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+   </top>
+   <left>
+      <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+   </right>
+   <bottom>
+      <AnchorPane prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+   </bottom>
+</BorderPane>
