--- a/src/Admin/Admin.fxml
+++ b/src/Admin/Admin.fxml
@@ -100,7 +100,7 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="28.0" layoutY="455.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="BOOKED MEDICINES" textFill="WHITE">
+                  <Button layoutX="28.0" layoutY="455.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#ShowBookedMed" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="BOOKED MEDICINES" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
