--- a/src/Admin/ManageDoctor.fxml
+++ b/src/Admin/ManageDoctor.fxml
@@ -17,7 +17,7 @@
                   <Font name="Verdana Bold" size="12.0" />
                </font>
             </Button>
-            <Button layoutX="681.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#ShowAdd" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #845f10;" text="ADD DOCTOR" textFill="WHITE">
+            <Button layoutX="681.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#ShowAddDoc" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #845f10;" text="ADD DOCTOR" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
