--- a/bin/Admin/Booked_Med.fxml
+++ b/bin/Admin/Booked_Med.fxml
@@ -12,22 +12,12 @@
       <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
-            <Button layoutX="473.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" onAction="#ShowSearch" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text=" SEARCH DOCTOR" textFill="WHITE">
+            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#ShowViewList" style="-fx-background-color: #845f10;" text="VIEW LIST" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
             </Button>
-            <Button layoutX="681.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#ShowAddDoc" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #845f10;" text="ADD DOCTOR" textFill="WHITE">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font>
-            </Button>
-            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#ShowPatientsList" style="-fx-background-color: #845f10;" text="CHECK PATIENTS LIST" textFill="WHITE">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font>
-            </Button>
-            <Text fill="#0c3d6b" layoutX="40.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MANAGE DOCTOR" wrappingWidth="197.5341796875">
+            <Text fill="#0c3d6b" layoutX="14.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="BOOKED MEDICINES" wrappingWidth="197.5341796875">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
                </font>
