--- a/bin/Stocks/Admin.fxml
+++ b/bin/Stocks/Admin.fxml
@@ -110,7 +110,7 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="615.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="EXIT APPLICATION" textFill="WHITE">
+                  <Button layoutX="25.0" layoutY="615.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#BackToAdmin" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="BACK TO ADMIN" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
