--- a/src/Stocks/Shortage.fxml
+++ b/src/Stocks/Shortage.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -11,26 +11,23 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="590.0" minWidth="1125.0" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Stocks.StocksController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#84b2d1" height="549.0" layoutX="49.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1033.0" />
-      <TextField layoutX="84.0" layoutY="97.0" minHeight="40.0" minWidth="340.0" promptText="Enter Drug Name">
-         <font>
-            <Font name="Verdana Bold" size="14.0" />
-         </font>
-      </TextField>
       <Button layoutX="916.0" layoutY="97.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" style="-fx-background-color: #326e9c;" text="SEARCH" textFill="WHITE">
          <font>
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Button>
-      <Text fill="#0c3d6b" layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOCK LIMIT">
+      <TableView fx:id="PharmacistTable" layoutX="109.0" layoutY="173.0" opacity="0.87" prefHeight="355.0" prefWidth="906.0">
+         <columns>
+            <TableColumn prefWidth="95.20001220703125" text="S.NO." />
+            <TableColumn prefWidth="277.59991455078125" text="DRUG ID" />
+            <TableColumn prefWidth="292.8000183105469" text="DRUG NAME" />
+            <TableColumn prefWidth="240.0" text="QUANTITY" />
+         </columns>
+      </TableView>
+      <Text fill="#0c3d6b" layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOCK SHORTAGE">
          <font>
             <Font name="Verdana Bold" size="16.0" />
          </font>
       </Text>
-      <TextField layoutX="499.0" layoutY="97.0" minHeight="40.0" minWidth="340.0" promptText="Enter Drug Id">
-         <font>
-            <Font name="Verdana Bold" size="14.0" />
-         </font>
-      </TextField>
-      <TableView fx:id="PharmacistTable" layoutX="109.0" layoutY="173.0" opacity="0.87" prefHeight="355.0" prefWidth="906.0" />
    </children>
 </AnchorPane>
