--- a/src/Stocks/Stock.fxml
+++ b/src/Stocks/Stock.fxml
@@ -12,12 +12,22 @@
       <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
-            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#MDetails" style="-fx-background-color: #845f10;" text="SEARCH MEDICINES" textFill="WHITE">
+            <Button layoutX="473.0" layoutY="22.0" minHeight="40.0" minWidth="180.0" mnemonicParsing="false" onAction="#ExpiryProducts" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #845f10;" text="EXPIRED PRODUCTS" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
             </Button>
-            <Text fill="#0c3d6b" layoutX="40.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MEDICINE DETAILS" wrappingWidth="197.5341796875">
+            <Button layoutX="681.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#NearExpiry" prefHeight="40.0" prefWidth="158.0" style="-fx-background-color: #845f10;" text="NEAR TO EXPIRY" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#StockShortage" style="-fx-background-color: #845f10;" text="STOCK SHORTAGE" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Button>
+            <Text fill="#0c3d6b" layoutX="40.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STOCKS" wrappingWidth="197.5341796875">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
                </font>
