--- a/bin/Doctor/Dashboard.fxml
+++ b/bin/Doctor/Dashboard.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="650.0" minWidth="1125.0" onMouseClicked="#Dashboard" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminController">
+<AnchorPane minHeight="650.0" minWidth="1125.0" onMouseClicked="#dashboardDoc" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doctor.DoctorController">
    <children>
       <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#9dacb9" height="100.0" layoutX="60.0" layoutY="45.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1005.0" />
       <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#3d8bc7d6" height="180.0" layoutX="60.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
