--- a/src/User/BookAppointments.fxml
+++ b/src/User/BookAppointments.fxml
@@ -12,7 +12,7 @@
       <AnchorPane minHeight="85.0" minWidth="1125.0" BorderPane.alignment="CENTER">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#dce2e7" height="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1125.0" />
-            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#MyCart" style="-fx-background-color: #845f10;" text="LIST" textFill="WHITE">
+            <Button layoutX="893.0" layoutY="22.0" minHeight="40.0" minWidth="185.0" mnemonicParsing="false" onAction="#UB_List" style="-fx-background-color: #845f10;" text="LIST" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
